<resources>
    <string name="app_name">THE APP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment_one">Hello blank fragment ONE</string>
    <string name="hello_blank_fragment_two">Hello blank fragment TWO</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_phoneno">Phone No</string>
    <string name="hint_height">Height</string>
    <string name="hint_weight">Weight</string>

    <string name="spinner_prompt">GENDER</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">SIGN UP</string>
    <string name="btn_link_to_register">Not a member? <u><b>Sign up </b></u>now.</string>
    <string name="btn_link_to_login">Already registred! <u><b>Login</b></u>.</string>
    <string name="welcome">Welcome</string>
    <string name="weight"><u><b>Weight</b></u></string>
    <string name="cardio"><u><b>Cardio</b></u></string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_status">status</string>
    <string name="title_activity_activity_update">activityUpdate</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_update">update</string>
    <string name="title_activity_status_base">status_base</string>
    <string name="title_activity_login">APP</string>
    <string name="title_activity_signup">signup</string>
</resources>
